--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tengo_viewer_prioritising_files
+name: tengo_viewer
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
