--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tengo_viewer
+name: tengo_editor
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -14,7 +14,6 @@ dependencies:
   equatable: ^2.0.5
   figma_squircle: ^0.5.3
   bloc: ^8.1.4
-  context_menus: ^2.0.0+1
   flutter_build_debian: ^0.0.1
 
 dev_dependencies:
