--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   figma_squircle: ^0.5.3
   bloc: ^8.1.4
   flutter_build_debian: ^0.0.1
+  extended_text_field: ^16.0.0
+  cardoteka: ^1.1.0
   # desktop_multi_window: ^0.2.0
   # window_manager_plus: 
   # bitsdojo_window: ^0.1.6
